ApiProxy module for authorizing and retrieving XML data.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6025 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -835,8 +835,13 @@ Filter=Filter
 button.ok=OK
 button.cancel=Cancel
 button.close=Close
+button.authorize=Authorize
 
 Loading=Loading…
+
+oauth.authorize=Authorize FoxTrick to access your team data
+oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get your personal identification number (PIN). Copy the PIN here to authorize FoxTrick for accessing your team data:
+oauth.success=FoxTrick is successfully authorized!
 
 # End of IN-GAME STRINGS.
 
