--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,9 @@
 			"content/forum-stage.js",
 			"content/header-copy-icons.js",
 			"content/core.js",
+			"content/api-proxy.js",
+			"content/oauth.js",
+			"content/sha1.js",
 			"content/util/currency.js",
 			"content/util/html.js",
 			"content/util/misc.js",
