nt-peek.js: show notice if unauthorized.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6032 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -841,7 +841,8 @@ Loading=Loading…
 
 oauth.authorize=Authorize FoxTrick to access your team data
 oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get your personal identification number (PIN). Copy the PIN here to authorize FoxTrick for accessing your team data:
-oauth.success=FoxTrick is successfully authorized!
+oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
+oauth.unauthorized=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data first.
 
 # End of IN-GAME STRINGS.
 
