--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -285,10 +285,6 @@ foxtrick.SkillColoring.skill_select.desc=Show also numbers at transfer search i.
 foxtrick.SkillColoring.no_skill_links.desc=Hides the underlining and green font given by HTs
 foxtrick.BackgroundFixed.desc=Static background image.
 foxtrick.MatchIncome.desc=Match income in the match report
-foxtrick.CrossTable.allway_show_cross.desc=Always show Cross Table
-foxtrick.CrossTable.allway_show_graph.desc=Always show Series Graph
-foxtrick.CrossTable.GraphHeader.desc=Season graph
-foxtrick.CrossTable.TableHeader.desc=Season cross table
 foxtrick.YouthSkillHideUnknown.desc=More space to the youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide youthskills which are unknown on youthplayers overview page
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide 'maximal' key word to gain more space particularly if facecards are enabled
@@ -822,6 +818,12 @@ foxtrick.htmsStatistics.changePrediction=Change prediction
 # HTMSPoints
 HTMSPoints=HTMS Points:
 HTMSPoints.AbilityAndPotential=Ability: %1 / Potential: %2
+
+# CrossTable
+CrossTable.graph=Season graph
+CrossTable.table=Cross table
+# will be shown as "R13" denoting round 13
+CrossTable.round=R%s
 
 #actions
 Copy=Copy
