--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -889,11 +889,15 @@ foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
 foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Notes, templates & custom links)
-foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences may be overwritten. Requires restart.)
+foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
+foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences will be overwritten)
+foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Load" to load your preferences.
 foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
+foxtrick.prefs.loaded=Preferences loaded!
+foxtrick.prefs.dismissNotice=(click to dismiss this notice)
 
 foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
 
