foxtrick.properties: remove deprecated entries and reorder.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6068 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -407,9 +407,6 @@ foxtrick.LeagueNewsFilter.friendlies=Friendlies & changed coaches
 foxtrick.LeagueNewsFilter.transfers=Transfers
 foxtrick.LeagueNewsFilter.lineup_changes=Lineup changes
 
-#gotoPostBox
-foxtrick.GoToPostBox.label=Go!
-
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
 leave_conf_button=Leave forum
@@ -424,7 +421,6 @@ template_exists=Template already exists or is empty
 template_title=Template title:
 template_title_illegal='[' and ']' are not allowed in titles
 delete_template_ask=Delete template?
-ok=OK
 
 #PostPreview
 show_preview_from_post=Display a preview of the posting
@@ -480,12 +476,6 @@ foxtrick.datetimestrings.short_days=d
 transfercompare_medianprice=Median price
 transfercompare_avgprice=Average price
 
-
-#YouthPromote
-Notes_about_skills=Notes about skills
-Edit_notes=Edit notes
-Save_notes=Save notes
-
 #Skills
 Playmaking=Playmaking
 Playmaking.abbr=PM
@@ -499,7 +489,6 @@ Defending=Defending
 Defending.abbr=DF
 Keeper=Keeper
 Keeper.abbr=KP
-#'Set pieces' (with a space) changed to 'Set_pieces' (with underscore). make sure it's changed in your local copy
 Set_pieces=Set pieces
 Set_pieces.abbr=SP
 
@@ -618,8 +607,6 @@ foxtrick.ntremoveconfirmation=Do you really want to add/remove this player from 
 foxtrick.confirmstripserver=Do you want to strip the hattrick server from the links to make the usable in forum?
 foxtrick.conferences.signaturetoggle=Signature
 foxtrick.conferences.markunread=Mark unread from here
-foxtrick.tweaks.sendmessage=Send message
-foxtrick.tweaks.sendmessageofficial=Please note that all staff issues and questions must be sent via the contact form in the <a class='inner' href='/Help/Contact.aspx'>staff pages</a>. The internal mail system is <b>not</b> to be used for staff related issues.
 foxtrick.tweaks.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
 foxtrick.linkscustom.addpersonallink=Add personal link
@@ -659,16 +646,6 @@ Screenshot=Commented screenshot of module's features
 StyleTutorial.title=Styling FoxTrick
 StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, which you can modify to satisfy your need.\nIf you have problem with the link, copy and paste it to the address bar. After saving the file, you can use the SkinPlugin module for loading the CSS file to have the user style in effect.
 
-# changes categories
-new=New
-fix=Fix
-
-Close=Close
-SortBy=Sort by
-Module=Module
-PreferenceTab=Preference Tab
-NewAfter=New after
-ChangeCategory=Type
 Coach=Coach
 
 # NOTE TO TRANSLATORS
@@ -835,12 +812,19 @@ Filter=Filter
 button.ok=OK
 button.cancel=Cancel
 button.close=Close
+button.customize=Customize
+button.save=Save
+button.go=Go!
 button.authorize=Authorize
+button.export=Export
+button.import=Import
+button.restoreDefault=Restore default
+button.disableAll=Disable all
 
 Loading=Loading…
 
 oauth.authorize=Authorize FoxTrick to access your team data
-oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get your personal identification number (PIN). Copy the PIN here to authorize FoxTrick for accessing your team data:
+oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get a verification code. Copy the code here to authorize FoxTrick for accessing your team data:
 oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
 oauth.unauthorized=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data first.
 
@@ -900,16 +884,6 @@ foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
 
 foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
-
-foxtrick.prefs.buttonSave=Save
-foxtrick.prefs.buttonCancel=Cancel
-foxtrick.prefs.buttonCustomize=Customize
-foxtrick.prefs.buttonCleanupBranch=Restore default
-foxtrick.prefs.buttonDisableAll=Disable all
-foxtrick.prefs.buttonSavePrefs=Save
-foxtrick.prefs.buttonLoadPrefs=Load
-foxtrick.prefs.activeCurrencyConverter=Enable currency converter
-
 foxtrick.versionReleaseNotes=Show release notes for:
 
 about.headDevelopers=Head Developers
@@ -919,7 +893,7 @@ about.translators=Translators
 about.designers=Designers
 
 delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
-disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
+disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
