foxtrick.properties: fix typos.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6069 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -252,8 +252,8 @@ foxtrick.LeagueNewsFilter.all.desc=Show all news
 foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Hightlight teams which changed or set line-up recently in next round table
-foxtrick.LeagueNewsFilter.highlight_wins.desc=Hightlight winning teams in last round table
+foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Highlight teams which changed or set line-up recently in next round table
+foxtrick.LeagueNewsFilter.highlight_wins.desc=Highlight winning teams in last round table
 foxtrick.LeagueNewsFilter.gray_bots.desc=Gray ownerless teams in match tables
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
