Links at help pane add and remove.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6071 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -851,12 +851,6 @@ foxtrick.prefs.AlertTab=Alert
 foxtrick.prefs.AboutTab=About
 foxtrick.prefs.ChangesTab=Changes
 foxtrick.prefs.HelpTab=Help
-foxtrick.prefs.links=Question forums and help pages
-foxtrick.prefs.portal=FoxTrick portal
-foxtrick.prefs.external_forum=FoxTrick forum
-foxtrick.prefs.hattrick_forum=FoxTrick forum (Hattrick)
-foxtrick.prefs.commented_screenshots=Commented Screenshots
-foxtrick.prefs.hex_color_editor=A hex color editor
 foxtrick.prefs.basicPreferences=Basic Preferences
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTCurrency=Currency
@@ -882,6 +876,15 @@ foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
 foxtrick.prefs.loaded=Preferences loaded!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+
+link.title=Links
+link.homepage=Homepage
+link.bugTracker=Report a bug
+link.hattrickForum=FoxTrick forum at Hattrick
+link.screenshots=Screenshots
+link.nightlyFirefox=Development builds for Firefox
+link.nightlyChrome=Development builds for Google Chrome
+link.recentChanges=Recent changes
 
 foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
 foxtrick.versionReleaseNotes=Show release notes for:
