foxtrick.properties: entry cleanup.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6073 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -584,9 +584,6 @@ Current_club.abbr=Club
 Current_league=Current league
 Current_league.abbr=League
 
-#Skills
-weak=weak
-
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
@@ -641,7 +638,6 @@ htLive=HT Live
 foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
-Screenshot=Commented screenshot of module's features
 
 StyleTutorial.title=Styling FoxTrick
 StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, which you can modify to satisfy your need.\nIf you have problem with the link, copy and paste it to the address bar. After saving the file, you can use the SkinPlugin module for loading the CSS file to have the user style in effect.
@@ -853,23 +849,20 @@ foxtrick.prefs.ChangesTab=Changes
 foxtrick.prefs.HelpTab=Help
 foxtrick.prefs.basicPreferences=Basic Preferences
 foxtrick.prefs.captionHTLanguage=Language
-foxtrick.prefs.captionHTCurrency=Currency
 foxtrick.prefs.captionHTDateformat=Date format
 foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionShowOnStatusBar=Status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.captionCurrencySymbolTo=Convert current currency to
-foxtrick.prefs.captionCurrencyConverter=Currency converter
 foxtrick.prefs.statusbarpref=Display FoxTrick icon on status bar (requires restart)
-foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings. Requires restart.)
+foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
 foxtrick.prefs.labelDisableAll=Disable all modules
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
-foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Notes, templates & custom links)
+foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Templates, custom links, and transfer filters)
 foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
 foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences will be overwritten)
-foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Load" to load your preferences.
+foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
 foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
@@ -895,7 +888,7 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
+delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
 foxtrick.prefs.AdditionalOptions=Additional options
