--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -882,6 +882,7 @@ link.recentChanges=Recent changes
 foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
 foxtrick.versionReleaseNotes=Show release notes for:
 
+about.copyright=Copyright
 about.headDevelopers=Head Developers
 about.projectOwners=Project Owners
 about.developers=Developers
