manifest.json: add permission to get data from chpp.hattrick.org.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6076 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -168,7 +168,8 @@
 		"tabs",
 		"notifications",
 		"http://www.hattrick-youthclub.org/*",
-		"http://www.fantamondi.it/*"
+		"http://www.fantamondi.it/*",
+		"*://*.hattrick.org/*"
 	],
 	"browser_action" : {
 		"default_title" : "FoxTrick",
