--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -168,6 +168,7 @@ foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on playe
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Also replaces the list of players by a selectbox on youth players page
 foxtrick.CopyPlayerAd.desc=A button on player's page for copying his details (in HT-ML).
 foxtrick.CopyPlayerAd.Sorted.desc=Sort the skills in descending order.
+foxtrick.CopyPlayerAd.NonTableStyle.desc=Copy in plain style without tables.
 foxtrick.CustomMedals.desc=Replaces the new Hattrick medals with the old style ones
 foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
