foxtrick.properties: add missing entry.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6091 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -838,6 +838,7 @@ status.active=active
 status.enabled=enabled, but not active on %s
 status.disabled=disabled
 
+prefs.screenshot=Screenshot
 foxtrick.prefs.MainTab=Main
 foxtrick.prefs.ShortcutsTab=Shortcuts and Add-ons
 foxtrick.prefs.PresentationTab=Presentation and Tweaks
