--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -331,7 +331,7 @@ foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
 foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
 foxtrick.SeriesFlags.Visitors.desc=Show in recent visitors box
 foxtrick.SeriesFlags.Oldies.desc=Show in old players and coaches page of a team
-foxtrick.SeriesFlags.CountryOnly.desc=If selected shows only the country flag without the serie name
+foxtrick.SeriesFlags.CountryOnly.desc=Display the country flag without series name
 foxtrick.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
 foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
 foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
