manifest.json: restrict to several sites.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6101 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -151,7 +151,10 @@
 			"content/loader-chrome.js"
 		],
 		"matches" : [
-			"*://*/*"
+			"*://*.hattrick.org/*",
+			"*://*.hattrick.ws/*",
+			"*://*.hattrick.interia.pl/*",
+			"*://*.hattrick.uol.com.br/*"
 		],
 		"run_at" : "document_start"
 	} ],
