manifest.json: put hattrick.org in the first position in permissions.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6102 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -166,9 +166,9 @@
 	"name" : "FoxTrick",
 	"permissions" : [
 		"notifications",
+		"*://*.hattrick.org/*",
 		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*",
-		"*://*.hattrick.org/*"
 	],
 	"browser_action" : {
 		"default_title" : "FoxTrick",
