--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -27,6 +27,7 @@ foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
 foxtrick.Ratings.desc=Adds ratings to the match page
+foxtrick.Ratings.hatstatsOnRatings=Adds hatstats values on each rating
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
 foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
@@ -589,6 +590,7 @@ Current_league.abbr=League
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
+foxtrick.matchdetail.total=Total
 foxtrick.shortcut.matchlineup=lineup
 
 foxtrick.matchdetail.right=Right
