api-proxy: separate error 401 (unauthorized) and other HTTP errors.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6108 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -826,7 +826,8 @@ Loading=Loading…
 oauth.authorize=Authorize FoxTrick to access your team data
 oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get a verification code. Copy the code here to authorize FoxTrick for accessing your team data:
 oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
-oauth.unauthorized=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data first.
+
+api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
 
 # End of IN-GAME STRINGS.
 
