ratings.js: make all ratings localizable.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6110 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -27,7 +27,14 @@ foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
 foxtrick.Ratings.desc=Adds ratings to the match page
-foxtrick.Ratings.hatstatsOnRatings=Adds hatstats values on each rating
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsTotal.desc=HatStats (total only)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
 foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
@@ -290,7 +297,7 @@ foxtrick.MatchIncome.desc=Match income in the match report
 foxtrick.YouthSkillHideUnknown.desc=More space to the youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide youthskills which are unknown on youthplayers overview page
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide 'maximal' key word to gain more space particularly if facecards are enabled
-foxtrick.SkillTable.desc=Show skills of players as a table. Suggest module "ExtraPlayerInfo" for showing extra information.
+foxtrick.SkillTable.desc=Show skills of players as a table.
 foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
@@ -656,8 +663,14 @@ foxtrick.tweaks.overview=Overview
 foxtrick.tweaks.writeinguestbook=Write in Guestbook
 foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
 foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
-HatStatsDetailed=HatStats (detailed)
-HatStatsTotalOnly=HatStats (total only)
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 foxtrick.tweaks.copyratings.both=Copy ratings (in HT-ML)
 foxtrick.tweaks.copyratings.home=Copy home team ratings (in HT-ML)
 foxtrick.tweaks.copyratings.away=Copy away team ratings (in HT-ML)
