Move matches/matches.js to pages/match.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6112 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,7 @@
 			"content/pages/player.js",
 			"content/pages/youth-player.js",
 			"content/pages/transfer-search-results.js",
+			"content/pages/match.js",
 			"content/forum/forum-strip-hattrick-links.js",
 			"content/forum/forum-change-posts-modules.js",
 			"content/forum/forum-change-posts.js",
@@ -48,7 +49,6 @@
 			"content/forum/go-to-post-box.js",
 			"content/forum/forum-presentation.js",
 			"content/forum/forum-thread-auto-ignore.js",
-			"content/matches/matches.js",
 			"content/matches/match-player-colouring.js",
 			"content/matches/match-report-format.js",
 			"content/matches/ratings.js",
