api-proxy.js: only provide a link for the user himself/herself to open.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6115 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -837,7 +837,7 @@ button.disableAll=Disable all
 Loading=Loading…
 
 oauth.authorize=Authorize FoxTrick to access your team data
-oauth.instructions=A new page will open shortly. Please enter your username and password for Hattrick on that page to get a verification code. Copy the code here to authorize FoxTrick for accessing your team data:
+oauth.instructions=A link to chpp.hattrick.org will appear below shortly.\nOpen the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data.\nFoxTrick will not know your password in the whole process.
 oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
 
 api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
