ratings.js: remove total from detailed HatStats.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6132 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -28,7 +28,7 @@ foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.HatStatsTotal.desc=HatStats (total only)
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
