--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,8 @@
 			"content/header-copy-icons.js",
 			"content/core.js",
 			"content/api-proxy.js",
-			"content/oauth.js",
-			"content/sha1.js",
+			"content/lib/oauth.js",
+			"content/lib/sha1.js",
 			"content/util/currency.js",
 			"content/util/html.js",
 			"content/util/misc.js",
