api-proxy.js: show error code if authorize link access error.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6156 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -839,6 +839,8 @@ oauth.success=FoxTrick has been successfully authorized! Please reload this page
 
 api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
 
+exception.error=Error %s
+
 # End of IN-GAME STRINGS.
 
 
