--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -835,6 +835,7 @@ Loading=Loading…
 
 oauth.authorize=Authorize FoxTrick to access your team data
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly.\nOpen the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data.\nFoxTrick will not know your password in the whole process.
+oauth.why=Why should I authorize FoxTrick?
 oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
 
 api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
