--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,7 @@
 			"content/util/time.js",
 			"content/pages/pages.js",
 			"content/pages/all.js",
+			"content/pages/country.js",
 			"content/pages/players.js",
 			"content/pages/player.js",
 			"content/pages/youth-player.js",
