--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -172,8 +172,7 @@ foxtrick.PlayerFilters.desc=Add a select box for filtering players on players pa
 foxtrick.HistoryStats.desc=Compiles an overview of team's history.
 foxtrick.LargeFlags.desc=Enlarge flags on player page if faces are shown (may crash on GNU/Linux)
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
-foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page. Clicking on the header switches between list and select box
-foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Also replaces the list of players by a selectbox on youth players page
+foxtrick.TeamSelectBox.desc=Replaces the list of players by a select box on players page. Clicking on the header switches between list and select box.
 foxtrick.CopyPlayerAd.desc=A button on player's page for copying his details (in HT-ML).
 foxtrick.CopyPlayerAd.Sorted.desc=Sort the skills in descending order.
 foxtrick.CopyPlayerAd.NonTableStyle.desc=Copy in plain style without tables.
