--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -332,7 +332,7 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by 
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
-foxtrick.NtPeek.desc=Peeks NT/U20 matches at My Hattrick
+foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
 foxtrick.SeriesFlags.desc=Show series flags beside user and/or team links (images provided by HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
 foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
