cross-table.js: show a note instead of graph when no matches has been played yet.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6212 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -810,6 +810,7 @@ CrossTable.graph=Season graph
 CrossTable.table=Cross table
 # will be shown as "R13" denoting round 13
 CrossTable.round=R%s
+CrossTable.noMatches=No matches has been played yet.
 
 #actions
 Copy=Copy
