NTPeak - custom country ID
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6217 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,6 +333,7 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
+foxtrick.NtPeek.CustomID.desc=Custom country ID to choose another country than your own
 foxtrick.SeriesFlags.desc=Show series flags beside user and/or team links (images provided by HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
 foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
