Introduce MyMonitor and restrict NtPeek to league pages.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6224 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,7 +333,6 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
-foxtrick.NtPeek.CustomId.desc=Custom league ID to choose another league than your own
 foxtrick.SeriesFlags.desc=Show series flags beside user and/or team links (images provided by HTMS)
 foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
 foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
@@ -348,6 +347,7 @@ foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
+foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 # -----------------------------------------------------------------------------
 
 
@@ -813,6 +813,11 @@ CrossTable.table=Cross table
 CrossTable.round=R%s
 CrossTable.noMatches=No matches has been played yet.
 
+# MyMonitor
+MyMonitor.header=My Monitor
+MyMonitor.inputTeamId=Input the ID of the team you want to monitor:
+MyMonitor.removeTeam=Select a team to remove:
+
 #actions
 Copy=Copy
 View=View
@@ -826,6 +831,8 @@ button.close=Close
 button.customize=Customize
 button.save=Save
 button.go=Go!
+button.add=Add
+button.remove=Remove
 button.authorize=Authorize
 button.export=Export
 button.import=Import
