--- a/manifest.json
+++ b/manifest.json
@@ -92,6 +92,7 @@
 			"content/shortcuts-and-tweaks/nt-peek.js",
 			"content/shortcuts-and-tweaks/extended-player-details.js",
 			"content/shortcuts-and-tweaks/htms-points.js",
+			"content/shortcuts-and-tweaks/my-monitor.js",
 			"content/presentation/original-face.js",
 			"content/presentation/move-player-statement.js",
 			"content/presentation/personality-images.js",
