friendly-interface.js: add option to hide speechless secretary.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6225 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -347,6 +347,7 @@ foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 # -----------------------------------------------------------------------------
 
