--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,11 +333,10 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
-foxtrick.SeriesFlags.desc=Show series flags beside user and/or team links (images provided by HTMS)
+foxtrick.SeriesFlags.desc=Show series flags beside user links
 foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
 foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
 foxtrick.SeriesFlags.Visitors.desc=Show in recent visitors box
-foxtrick.SeriesFlags.Oldies.desc=Show in old players and coaches page of a team
 foxtrick.SeriesFlags.CountryOnly.desc=Display the country flag without series name
 foxtrick.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
 foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
