Introduce MarkAllAsRead module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6261 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -348,6 +348,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as link
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
+foxtrick.MarkAllAsRead.desc=A button to mark all forum thread as read
 # -----------------------------------------------------------------------------
 
 
@@ -817,6 +818,9 @@ CrossTable.noMatches=No matches has been played yet.
 MyMonitor.header=My Monitor
 MyMonitor.inputTeamId=Input the ID of the team you want to monitor:
 MyMonitor.removeTeam=Select a team to remove:
+
+# MarkAllAsRead
+MarkAllAsRead.title=Mark threads in all forums as read
 
 #actions
 Copy=Copy
