my-monitor.js: use sidebar box to add teams and add links.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6269 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -816,7 +816,9 @@ CrossTable.noMatches=No matches has been played yet.
 
 # MyMonitor
 MyMonitor.header=My Monitor
-MyMonitor.inputTeamId=Input the ID of the team you want to monitor:
+MyMonitor.add=Add to my monitor
+MyMonitor.remove=Remove from my monitor
+MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
 MyMonitor.removeTeam=Select a team to remove:
 
 # MarkAllAsRead
