my-monitor.js: add detailed info for team when removing.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6270 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -820,6 +820,11 @@ MyMonitor.add=Add to my monitor
 MyMonitor.remove=Remove from my monitor
 MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
 MyMonitor.removeTeam=Select a team to remove:
+# %s, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%s (%t, #%i)
+MyMonitor.type.senior=Senior
+MyMonitor.type.youth=Youth
+MyMonitor.type.nt=National
 
 # MarkAllAsRead
 MarkAllAsRead.title=Mark threads in all forums as read
