foxtrick.properties: rephrase description for MarkAllAsRead.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6276 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -348,7 +348,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as link
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
-foxtrick.MarkAllAsRead.desc=A button to mark all forum thread as read
+foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 # -----------------------------------------------------------------------------
 
 
