Introduce ShowFriendlyBooked module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6282 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -349,6 +349,7 @@ foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
+foxtrick.ShowFriendlyBooked.desc=Show whether team has booked a friendly on series page
 # -----------------------------------------------------------------------------
 
 
@@ -774,6 +775,9 @@ CurrentBidderShort.abbr=Bd
 Senior=Senior
 Youth=Youth
 
+team.status.booked=Friendly booked
+team.status.booked.abbr=B
+
 # TransferSearchResultFilters
 TransferSearchResultFilters.hide_bruised=Hide bruised
 TransferSearchResultFilters.hide_injured=Hide injured
@@ -850,7 +854,10 @@ button.import=Import
 button.restoreDefault=Restore default
 button.disableAll=Disable all
 
-Loading=Loading…
+status.loading=Loading…
+status.loading.abbr=…
+status.error=Error
+status.error.abbr=!
 
 oauth.authorize=Authorize FoxTrick to access your team data
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly.\nOpen the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data.\nFoxTrick will not know your password in the whole process.
