--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -349,7 +349,7 @@ foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
 foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
-foxtrick.ShowFriendlyBooked.desc=Show whether team has booked a friendly on series page
+foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 # -----------------------------------------------------------------------------
 
 
