Add category "Information Aggregation" and move modules there.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6301 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -882,16 +882,20 @@ status.enabled=enabled, but not active on %s
 status.disabled=disabled
 
 prefs.screenshot=Screenshot
-foxtrick.prefs.MainTab=Main
-foxtrick.prefs.ShortcutsTab=Shortcuts and Add-ons
-foxtrick.prefs.PresentationTab=Presentation and Tweaks
-foxtrick.prefs.MatchesTab=Matches
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AlertTab=Alert
-foxtrick.prefs.AboutTab=About
-foxtrick.prefs.ChangesTab=Changes
-foxtrick.prefs.HelpTab=Help
+
+# tabs in preferences page
+tab.main=Main
+tab.informationAggregation=Information Aggregation
+tab.shortcutsAndTweaks=Shortcuts and Tweaks
+tab.presentation=Presentation
+tab.matches=Matches
+tab.forum=Forum
+tab.links=Links
+tab.alert=Alert
+tab.about=About
+tab.changes=Changes
+tab.help=Help
+
 foxtrick.prefs.basicPreferences=Basic Preferences
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTDateformat=Date format
