foxtrick.properties: add missing "desc"s.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6302 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -32,9 +32,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats=VnukStats
-foxtrick.Ratings.HTitaVal=HTitaVal
-foxtrick.Ratings.GardierStats=GardierStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
 foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
