show-friendly-booked.js: show status unknown when team playing a match.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6304 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -856,6 +856,8 @@ status.loading=Loading…
 status.loading.abbr=…
 status.error=Error
 status.error.abbr=!
+status.unknown=Unknown
+status.unknown.abbr=?
 
 oauth.authorize=Authorize FoxTrick to access your team data
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly.\nOpen the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data.\nFoxTrick will not know your password in the whole process.
