Split tables.js into two files and move to appropriate category.
GoaldifferenceToTables renamed to GoalDifferenceToTables.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6308 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -233,7 +233,7 @@ foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/fr
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
 foxtrick.CopyRatings.desc=Add links to ratings table on match report page for copying ratings (in HT-ML)
-foxtrick.GoaldifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on old series tables
+foxtrick.GoalDifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on old series tables
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league postitions
 foxtrick.ElectionTable.desc=Adds percentage to election table (only displayed votes are counted, not all)
 foxtrick.ContextMenuCopy.desc=Options at the context menu for copying ID and/or link and content in HT-ML
