Rename module FoxtrickLineupShortcut to LineupShortcut.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6309 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -11,8 +11,8 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=Add a shortcut to lineup on player's match history
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=Highlight player in the lineup with a yellow color when coming to the lineup page using shortcut, replacing HT highlighting.
+foxtrick.LineupShortcut.desc=Add a shortcut to lineup on player's match history
+foxtrick.LineupShortcut.HighlightPlayer.desc=Highlight player in the lineup with a yellow color when coming to the lineup page using shortcut, replacing HT highlighting.
 foxtrick.SmallerPages.desc=Reduces the dimension of some pages to adapt to small screens
 foxtrick.SmallerPages.ReduceBid.desc=Move the bid beside the skills and cut all strings leaving only numbers (like current bid and time)
 foxtrick.ForumTemplates.desc=Allows turning forum posts into templates for later use (Also works for mails, tickets and Guestbook, editors)
