Rename module htmsStatistics to HTMSPrediction.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6310 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -310,7 +310,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on 
 foxtrick.MatchTables.desc=Removes white space on match tables on simple design
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
-foxtrick.htmsStatistics.desc=Adds statistics on score result on matches.
+foxtrick.HTMSPrediction.desc=Add result prediction on match report page
 foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
@@ -799,11 +799,11 @@ foxtrick.LeagueAndMatchChat.CupChat=Non HT Cup chat
 foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federation Chat
 
 
-#htms
-foxtrick.htmsStatistics.prediction=Predicted result
-foxtrick.htmsStatistics.windrawloss=win/draw/loss
-foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
-foxtrick.htmsStatistics.changePrediction=Change prediction
+# HTMSPrediction
+HTMSPrediction.prediction=Predicted result
+HTMSPrediction.winDrawLoss=win/draw/loss
+HTMSPrediction.title=Match Analysis by HTMS
+HTMSPrediction.changePrediction=Change prediction
 
 # HTMSPoints
 HTMSPoints=HTMS Points:
